<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatrixCalc</string>
    <string name="hello_world">矩阵运算</string>
    <string name="action_settings">Settings</string>
    <string name="text_labber">求阶梯矩阵</string>
    <string name="text_inverse">求逆矩阵</string>
	<string name="text_form">新建矩阵</string>
	<string name="text_new">新矩阵</string>
	<string name="text_row">行</string>
	<string name="text_col">列</string>
	<string name="process">过程</string>
	 
</resources>
